# router-events

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pipeline.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_manufacturer_columns.py
examples/routeros/: dhcp-notify  dhcp-notify.rsc
router_events/: __init__.py  database.py  main.py  models.py  notifications.py  schemas.py
static/: devices.html
tests/: __init__.py  conftest.py  test_database.py  test_edge_cases.py  test_main.py  test_models.py  test_notifications.py  test_schemas.py
