[tool.poetry]
name = "router-events"
version = "0.1.0"
description = "RouterOS event receiver and processor"
authors = ["Melvyn de Kort <melvyn@mdekort.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.118"
uvicorn = {extras = ["standard"], version = "^0.37"}
pydantic = "^2.10"
aiomysql = "^0.2"
httpx = "^0.28"
sqlalchemy = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = "^7.0"
pytest-asyncio = "^0.24"
pylint = "^3.3"
httpx = "^0.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
